trash2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thegull-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-subdomain.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thegull-service
                port:
                  number: 80
